--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,95 +6,65 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="#070707">
 
-    <TextView android:text="My Nanodegree" android:layout_width="wrap_content"
-        android:textStyle="bold"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="25dp"
-        android:textColor="#f77206" />
+    <TextView
+        style="@style/TitleTheme"
+        android:id="@+id/title_text" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonTheme"
         android:text="Spotify Streamer"
-        android:textStyle="bold"
         android:id="@+id/spotify_button"
-        android:layout_marginTop="35dp"
-        android:layout_below="@+id/textView"
-        android:layout_marginBottom="15dp"
+        android:layout_below="@+id/title_text"
         android:layout_alignRight="@+id/build_it_button"
         android:layout_alignEnd="@+id/build_it_button"
         android:layout_alignLeft="@+id/build_it_button"
-        android:layout_alignStart="@+id/build_it_button"
-        android:background="#f77206" />
+        android:layout_alignStart="@+id/build_it_button"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonTheme"
         android:text="Scores App"
-        android:textStyle="bold"
         android:id="@+id/scores_button"
         android:layout_below="@+id/spotify_button"
-        android:layout_marginBottom="15dp"
         android:layout_alignRight="@+id/spotify_button"
         android:layout_alignEnd="@+id/spotify_button"
         android:layout_alignLeft="@+id/spotify_button"
-        android:layout_alignStart="@+id/spotify_button"
-        android:background="#f77206" />
+        android:layout_alignStart="@+id/spotify_button"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonTheme"
         android:text="Library App"
-        android:textStyle="bold"
         android:id="@+id/library_button"
-        android:layout_marginBottom="15dp"
         android:layout_below="@+id/scores_button"
         android:layout_alignRight="@+id/scores_button"
         android:layout_alignEnd="@+id/scores_button"
         android:layout_alignLeft="@+id/scores_button"
-        android:layout_alignStart="@+id/scores_button"
-        android:background="#f77206" />
+        android:layout_alignStart="@+id/scores_button"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonTheme"
         android:text="Build it Bigger"
         android:id="@+id/build_it_button"
-        android:textStyle="bold"
-        android:layout_marginBottom="15dp"
         android:layout_below="@+id/library_button"
         android:layout_alignLeft="@+id/reader_button"
         android:layout_alignStart="@+id/reader_button"
         android:layout_alignRight="@+id/reader_button"
-        android:layout_alignEnd="@+id/reader_button"
-        android:background="#f77206" />
+        android:layout_alignEnd="@+id/reader_button" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonTheme"
         android:text="XYZ Reader"
-        android:textStyle="bold"
         android:id="@+id/reader_button"
         android:layout_below="@+id/build_it_button"
-        android:layout_marginBottom="15dp"
         android:layout_alignRight="@+id/capstone_button"
         android:layout_alignEnd="@+id/capstone_button"
         android:layout_alignLeft="@+id/capstone_button"
-        android:layout_alignStart="@+id/capstone_button"
-        android:background="#f77206" />
+        android:layout_alignStart="@+id/capstone_button" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonTheme"
         android:text="Capstone: My Own App"
-        android:textStyle="bold"
         android:id="@+id/capstone_button"
-        android:padding="10dp"
         android:layout_below="@+id/reader_button"
-        android:layout_centerHorizontal="true"
-        android:background="#f77206" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
